# biodiversity-soundscapes

./: .gitignore  README.md  pyproject.toml
config/: v0_yosemite.yaml
data/processed/: .gitkeep
data/raw/: README.md  yosemite_birds.csv
docs/: DEVELOPER_GUIDE.md  USER_GUIDE.md
outputs/runs/: .gitkeep
scripts/: generate_sample_data.py
src/biosound/: __init__.py  cli.py
src/biosound/adapters/: __init__.py  base.py  ebird_api_stub.py  inat_api_stub.py  nps_local_csv.py
src/biosound/demo/: __init__.py  app_streamlit.py
src/biosound/mapping/: __init__.py  metadata.py  midi_writer.py  rules_v0.py
src/biosound/processing/: __init__.py  aggregate.py  metrics.py  standardize.py
src/biosound/render/: __init__.py  fluidsynth_render.py
src/biosound/utils/: __init__.py  hashing.py  io.py  timebins.py
tests/: conftest.py  test_mapping_determinism.py  test_metrics.py  test_schema.py
